@@ -27,7 +27,7 @@ SERVER_HOME="../../"
 LIBS=$SERVER_HOME/libs
 PUB_LIB=""
 MAIN_CLASS=io.nuls.cmd.client.CmdClientBootstrap
-
+JAVA=${JAVA_HOME}/bin/java
 for jar in `find $LIBS -name "*.jar"`
 
 do
@@ -35,7 +35,7 @@ do
 done
 PUB_LIB="${PUB_LIB}:./cmdclient-1.0.0.jar"
 # Get standard environment variables
-JAVA_OPTS="-Xms128m -Xmx128m"
+JAVA_OPTS="-Xms128m -Xmx128m -Dapp.name=cmd-client --illegal-access=warn"
 
 CONF_PATH=$SERVER_HOME/conf
 CLASSPATH=$CLASSPATH:$CONF_PATH:$PUB_LIB:.
@@ -45,14 +45,14 @@ if  [ -x ${SERVER_HOME}/jre/bin/java ]; then
   exit 0
 fi
 
-JAVA_BIN=`which java`
+#JAVA_BIN=`which java`
 # try to use JAVA_HOME jre
-if [ -x ${JAVA_BIN} ]; then
-  ${JAVA_BIN} $JAVA_OPTS -classpath $CLASSPATH $MAIN_CLASS
+if [ -x ${JAVA} ]; then
+  ${JAVA} $JAVA_OPTS -classpath $CLASSPATH $MAIN_CLASS
   exit 0
 fi
 
- $JAVA_OPTS -classpath $CLASSPATH $MAIN_CLASS
+# $JAVA_OPTS -classpath $CLASSPATH $MAIN_CLASS
 
 echo "The JAVA_HOME environment variable is not defined"
 echo "This environment variable is needed to run this program"
